# fileferry

./: AGENTS.md  BUILD.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml  release-artifacts.yml
crates/fileferry-cli/: Cargo.toml
crates/fileferry-cli/src/: lib.rs  main.rs
crates/fileferry-cli/tests/: cli_contract.rs  local_restore_drills.rs  repository_commands.rs  version.rs
crates/fileferry-core/: Cargo.toml
crates/fileferry-core/src/: lib.rs
crates/fileferry-core/tests/: repository_format_fixtures.rs
crates/fileferry-crypto/: Cargo.toml
crates/fileferry-crypto/src/: lib.rs
crates/fileferry-platform/: Cargo.toml
crates/fileferry-platform/src/: lib.rs
crates/fileferry-policy/: Cargo.toml
crates/fileferry-storage/: Cargo.toml
crates/fileferry-storage/src/: lib.rs
crates/fileferry-testkit/: Cargo.toml
crates/fileferry-testkit/src/: lib.rs
crates/fileferry-web/: Cargo.toml
crates/fileferry-web/src/: lib.rs  main.rs
crates/sealport-storage/: Cargo.toml
crates/sealport-storage/src/: lib.rs
crates/sealport-web/: Cargo.toml
crates/sealport-web/src/: lib.rs  main.rs  site.css
deploy/: fileferry-web.env.example
deploy/caddy/: fileferry.app.caddy
deploy/systemd/: fileferry-web.service
docs/: backblaze-b2-dev-storage.md  cli-contract.md  dependency-policy.md  homepage-deployment.md  operations.md  platform-metadata.md  release-notes-1.0.0-rc.1.md  release-notes-1.0.0.md  release.md  repository-format.md  security.md  storage.md
scripts/: install.ps1  install.sh
tests/fixtures/repository-format/v0/bootstrap-keyslot/: bootstrap
tests/fixtures/repository-format/v0/forget-prune-state/: bootstrap
tests/fixtures/repository-format/v0/lease-state/: bootstrap
tests/fixtures/repository-format/v0/lease-state/locks/: aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
tests/fixtures/repository-format/v0/migration/future-feature-bootstrap/: bootstrap
tests/fixtures/repository-format/v0/migration/future-format-bootstrap/: bootstrap
tests/fixtures/repository-format/v0/migration/unversioned-bootstrap/: bootstrap
tests/fixtures/repository-format/v0/policy-config/: bootstrap
tests/fixtures/repository-format/v0/recovery-export/: recovery.fileferry-key
tests/fixtures/repository-format/v0/snapshot-data/: bootstrap
tests/fixtures/repository-format/v0/upload-state/: bootstrap
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: install_scripts.rs
