[package]
name = "fileferry-storage"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-util.workspace = true
object_store.workspace = true
secrecy.workspace = true
tokio = { workspace = true, features = ["fs", "io-util"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread"] }
