[package]
name = "fileferry-storage"
version = "1.0.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
futures-util.workspace = true
object_store.workspace = true
secrecy.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "sync", "time"] }
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
async-trait = "0.1.89"
tempfile.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "rt-multi-thread", "sync", "time"] }
