[package]
name = "fileferry-testkit"
version = "1.0.0-rc.1"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
fileferry-storage = { path = "../fileferry-storage" }
tempfile.workspace = true
tokio = { workspace = true, features = ["sync"] }
